--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body{
 }
 h1{
     font-size: 55px;
-    color: rgb(128, 128, 128);
+    color: grey;
     font-weight: bold;
     
     
@@ -34,4 +34,28 @@ h1{
 }
 .half-width img{
     width: 80%;
+}
+.aboutme{
+    background-image: url(img/7.png);
+
+}
+h2{
+    font-size:30px ;
+    color: grey;
+    font-weight: bold;
+}
+.tomato{
+    color: tomato;
+}
+h3{
+    font-size: 20px;
+    text-align: center;
+    color: rgb(128, 128, 128);
+}
+#footer-p{
+    text-align: center;
+    color: white;
+}
+footer{
+    background-color:rgb(8, 13, 43);
 }
