--- a/style.css
+++ b/style.css
@@ -33,10 +33,11 @@ h1{
     border-radius: 30px;
 }
 .half-width img{
-    width: 80%;
+    
 }
 .aboutme{
     background-image: url(img/7.png);
+    background-repeat: no-repeat;
 
 }
 h2{
@@ -47,8 +48,11 @@ h2{
 .tomato{
     color: tomato;
 }
+.person{
+    padding-left:25% ;
+}
 h3{
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     color: rgb(128, 128, 128);
 }
