--- a/style.css
+++ b/style.css
@@ -32,9 +32,6 @@ h1{
     padding:15px 35px;
     border-radius: 30px;
 }
-.half-width img{
-    
-}
 .aboutme{
     background-image: url(img/7.png);
     background-repeat: no-repeat;
@@ -49,7 +46,30 @@ h2{
     color: tomato;
 }
 .person{
+    margin-top: 35px;
     padding-left:25% ;
+}
+.my-recipies h2{
+    text-align: center;
+}
+.my-recipies p{
+    text-align: center;
+}
+.food-item{
+    width: 80%;
+    margin-left:5% ;
+    margin-right: 8%;
+    padding-left: 20px;
+    padding-right: 10px;
+    box-shadow: 5px 10px 40px;
+    border-radius: 10px;
+    
+}
+.food-item p{
+    text-align: left;
+}
+.food-img{
+    margin-top: 5%;
 }
 h3{
     font-size: 25px;
