--- a/style.css
+++ b/style.css
@@ -13,8 +13,7 @@ h1{
 }
 .flexible-container{
     display: flex;
-    margin-top: 50px;
-    
+    margin-top: 50px;  
 }
 .half-width{
     width: 50%;
@@ -35,6 +34,7 @@ h1{
 .aboutme{
     background-image: url(img/7.png);
     background-repeat: no-repeat;
+    
 
 }
 h2{
@@ -55,11 +55,18 @@ h2{
 .food-item{
     width: 80%;
     margin-left:5% ;
-    margin-right: 8%;
-    padding-left: 20px;
-    padding-right: 10px;
+    margin-right: 10%;
+    padding-left: 1%;
+    padding-right: 1%;
     box-shadow: 5px 10px 40px;
     border-radius: 10px;
+    
+}
+.food-flexible{
+    display: flex;
+    width: 70%;
+    margin-top: 5%;
+    padding-left:8% ; 
     
 }
 .food-item h2{
